--- a/templates/resources.html
+++ b/templates/resources.html
@@ -50,6 +50,11 @@
       object-fit: cover; 
       border-radius: 5px;
     }
+    .navbar ul li a:hover,
+    .navbar ul li.active a {
+      text-decoration: underline; 
+      color: #007bff; /* Highlight active page link */
+    }
     .treatment-title {
       color: #000000;
       font-weight: bold;
@@ -68,13 +73,12 @@
       <div class="logo">Mind Matters</div>
       <nav>
         <ul>
-          <li><a href="{{ url_for('feed') }}">Home</a></li>
-          <li><a href="{{ url_for('resources') }}">Resources</a></li>
-          <li><a href="{{ url_for('profile') }}">Profile</a></li>
-          <li><a href="{{ url_for('consultation') }}">Consultation</a></li>
-          <li>
-            <input type="text" class="search-bar" placeholder="Search...">
-          </li>
+          <li class="{% if request.endpoint == 'feed' %}active{% endif %}"><a href="{{ url_for('feed') }}">Home</a></li>
+          <li class="{% if request.endpoint == 'resources' %}active{% endif %}"><a href="{{ url_for('resources') }}">Resources</a></li>
+          <li class="{% if request.endpoint == 'profile' %}active{% endif %}"><a href="{{ url_for('profile') }}">Profile</a></li>
+          <li class="{% if request.endpoint == 'consultation' %}active{% endif %}"><a href="{{ url_for('consultation') }}">Consultation</a></li>
+          <li><input type="text" class="search-bar" placeholder="Search..."></li>
+          <li><a href="{{ url_for('logout') }}">Logout</a></li>
         </ul>
       </nav>
     </div>
