--- a/templates/profile.html
+++ b/templates/profile.html
@@ -89,6 +89,7 @@
       <div class="d-flex justify-content-center gap-2 mt-3">
         <a href="{{ url_for('messages') }}" class="btn btn-primary">Message</a>
         <a href="{{ url_for('edit_profile') }}" class="btn btn-secondary">Edit Profile</a>
+        <a href="{{ url_for('mood_tracking') }}" class="btn btn-success">Mood Tracking</a>
     </div>
   </div>
 
