--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -69,18 +69,19 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo">MindMatters</div>
-            <nav>
-                <ul>
-                  <li class="{% if request.endpoint == 'feed' %}active{% endif %}"><a href="{{ url_for('feed') }}">Home</a></li>
-                  <li class="{% if request.endpoint == 'resources' %}active{% endif %}"><a href="{{ url_for('resources') }}">Resources</a></li>
-                  <li class="{% if request.endpoint == 'profile' %}active{% endif %}"><a href="{{ url_for('profile') }}">Profile</a></li>
-                  <li class="{% if request.endpoint == 'consultation' %}active{% endif %}"><a href="{{ url_for('consultation') }}">Consultation</a></li>
-                  <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                </ul>
-              </nav>
+          <div class="logo">Mind Matters</div>
+          <nav>
+            <ul>
+              <li class="{% if request.endpoint == 'feed' %}active{% endif %}"><a href="{{ url_for('feed') }}">Home</a></li>
+              <li class="{% if request.endpoint == 'resources' %}active{% endif %}"><a href="{{ url_for('resources') }}">Resources</a></li>
+              <li class="{% if request.endpoint == 'profile' %}active{% endif %}"><a href="{{ url_for('profile') }}">Profile</a></li>
+              <li class="{% if request.endpoint == 'consultation' %}active{% endif %}"><a href="{{ url_for('consultation') }}">Consultation</a></li>
+              <li class="{% if request.endpoint == 'exercise' %}active{% endif %}"><a href="{{ url_for('exercise') }}">Exercise</a></li>
+              <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            </ul>
+          </nav>
         </div>
-    </header>
+      </header>
 
     <div class="container my-5">
         <h2 class="section-title">Professional Consultation Booking</h2>
